# RAG-Langchain

./: app.py  pyproject.toml  requirements.txt
data/vector_store/: chroma.sqlite3
data/vector_store/3027d5eb-89e9-49b9-904d-744b0989aedb/: index_metadata.pickle
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  search.py
